# chess-ai

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  chess_trainer.pickle  list_evaluations.pickle  model.pickle  model_3.pickle  model_minimax.pickle  nn.pth  pyproject.toml  requirements.txt  setup.py  supervised_dataset.feather  test_chesspython.py  test_mcts.py
.github/workflows/: PR.yml  python-publish.yml
chess_ai/classical_agent/: agent.py  evaluate_agent.py
chess_ai/evaluation/: utils.py
chess_ai/playground/: chess_cli.py  chess_gui.py
chess_ai/rlagent/: agent.py
chess_ai/rlagent/checkpoints/: .gitkeep  nn_supervised_conv_kaggle_with_5_runs.pth
chess_ai/rlagent/data/pickle/: buffer_1.pickle
chess_ai/rlagent/muzero/: all.py  compete.py  compress_processed_df.py  generate_supervised_dataset.py  models.py  process_supervised_dataset.py  supervised.py  test_nn.py  test_torch_policy.py  train_nn.py  train_supervised.py  train_supervised_res.py  trainer.py  utils.py
chess_ai/rlagent/training/: test_bug.py  trainer.py  trainer_minimax.py
data/: evaluated_positions.json
notebooks/: 2022_21_11_check_supervised_dataset.ipynb  fork-of-notebookd107dc02f5 (2).ipynb  fork-of-notebookd107dc02f5.ipynb
src/: engine.py
src/classical_agent/: agent.py  evaluate_agent.py
src/evaluation/: utils.py
src/playground/: chess_cli.py  chess_gui.py  chess_ui.py  chess_ui_oop.py
